--- a/templates/libraries.html
+++ b/templates/libraries.html
@@ -9,7 +9,7 @@
 <!-- Titlebar
 ================================================== -->
 <div class="parallax titlebar"
-	data-background="images/listings-parallax.jpg"
+	data-background="{% static 'images/libraries-banner.jpg' %}"
 	data-color="#333333"
 	data-color-opacity="0.7"
 	data-img-width="800"
@@ -20,7 +20,7 @@
 			<div class="row">
 				<div class="col-md-12">
 
-					<h2>Listings</h2>
+					<h2>Libraries</h2>
 					<span>We find the best libraries near you</span>
 				</div>
 			</div>
