--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -97,6 +97,9 @@
                         <li>
                             <a href="{% url 'exams:currentaffairs' %}" {% if request.resolver_match.view_name == 'exams:currentaffairs' %}class="current"{% endif %}>Current Affairs</a>
 						</li>
+                        <li>
+                            <a href="{% url 'core:compare' %}" {% if request.resolver_match.view_name == 'core:compare' %}class="current"{% endif %}>Compare</a>
+						</li>
 						<li>
                             <a href="{% url 'core:contact' %}" {% if request.resolver_match.view_name == 'core:contact' %}class="current"{% endif %}>Contact Us</a>
 						</li>
@@ -140,6 +143,9 @@
                         <li>
                             <a href="{% url 'exams:currentaffairs' %}" {% if request.resolver_match.view_name == 'exams:currentaffairs' %}class="current"{% endif %}>Current Affairs</a>
 						</li>
+                        <li>
+                            <a href="{% url 'core:compare' %}" {% if request.resolver_match.view_name == 'core:compare' %}class="current"{% endif %}>Compare</a>
+						</li>
 						<li>
                             <a href="{% url 'core:contact' %}" {% if request.resolver_match.view_name == 'core:contact' %}class="current"{% endif %}>Contact Us</a>
 						</li>
@@ -158,7 +164,6 @@
                             <ul>
                                 <li><a href="{% url 'core:userprofile' %}"><i class="sl sl-icon-user"></i> My Profile</a></li>
                                 <li><a href="{% url 'core:bookmarks' %}"><i class="sl sl-icon-star"></i> Bookmarks</a></li>
-                                <li><a href="{% url 'core:compare' %}"><i class="fas fa-exchange-alt"></i> Compare List</a></li>
                                 <li><a href="{% url 'core:mylibraries' %}"><i class="sl sl-icon-docs"></i> My Libraries</a></li>
                                 <li><a href="{% url 'account_logout' %}"><i class="sl sl-icon-power"></i> Log Out</a></li>
                             </ul>
