--- a/exams/templates/previousyearqa.html
+++ b/exams/templates/previousyearqa.html
@@ -10,6 +10,12 @@
 
 <!-- Titlebar
 ================================================== -->
+<div class="parallax titlebar"
+	data-background="{% static 'images/exam.jpg' %}"
+	data-color="#333333"
+	data-color-opacity="0.7"
+	data-img-width="800"
+	data-img-height="505">
 <div id="titlebar">
 	<div class="container">
 		<div class="row">
@@ -20,6 +26,7 @@
 			</div>
 		</div>
 	</div>
+</div>
 </div>
 
 
