--- a/templates/dashboard/comparelibraries.html
+++ b/templates/dashboard/comparelibraries.html
@@ -11,6 +11,12 @@
 
     <!-- Titlebar
     ================================================== -->
+    <div class="parallax titlebar"
+	data-background="{% static 'images/comp.jpg' %}"
+	data-color="#333333"
+	data-color-opacity="0.7"
+	data-img-width="800"
+	data-img-height="505">
     <div id="titlebar">
         <div class="container">
             <div class="row">
