--- a/templates/libraries.html
+++ b/templates/libraries.html
@@ -177,7 +177,7 @@
 
 				<!-- Widget -->
 				<div class="widget margin-bottom-40">
-					<h3 class="margin-top-0 margin-bottom-35">Find New Home</h3>
+					<h3 class="margin-top-0 margin-bottom-35">Find Best Libraries</h3>
 
                     {% comment %}
 					<!-- Row -->
