--- a/templates/index.html
+++ b/templates/index.html
@@ -295,7 +295,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-sm-8">
                         <h2>It's your journey to a better future. We're here to help you.</h2>
-                        <p>We’re full-service, agents who know how to find appropriate libraries for you. We use online tools with an unmatched search capability to make you smarter and faster.We help you find libraraies near you to make your studies comfotable. We provide you,all the information for the libraries,their amenities seating arrangements and all other facilities.  </p>
+                        <p>We’re full-service, agents who know how to find appropriate libraries for you. We use online tools with an unmatched search capability to make you smarter and faster.We help you find libraries near you to make your studies comfortable. We provide you,all the information for the libraries,their amenities seating arrangements and all other facilities.  </p>
                         <a href="#" class="button margin-top-25">Get Started</a>
                     </div>
                 </div>
